package Tuesday.Inheritance;

public class Cat extends Mammal{
}
